test/expected/set_noexplicit-int_u.out
cdecl> set noexplicit-int=u
                          ^
20: error: "no" set options take no value
